--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Yeseva One" Arial;
+
 }
 
 .nav-container {
@@ -40,7 +41,15 @@ a:visited {
   aspect-ratio: ratio 960 / 200;
   width: 100vw;
 }
+#aboutMeBanner {
+  height: 100vh;
+  width: 100vw;
+}
 
+#middle {
+  height: 100vh;
+  width: 100vw;
+}
 .nav li a:hover,
 ion-icon,
 .products span:hover {
@@ -94,3 +103,66 @@ ion-icon {
   text-align: center;
   list-style-type: none;
 }
+
+.center {
+  width: 80%;
+  margin: 1.2rem auto;
+}
+
+.center p {
+  text-align: justify;
+  line-height: 1.8rem;
+  font-size: 1.5rem;
+}
+
+
+.formcontainer { /* Style inputs with type="text", select elements and textareas */
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #b99174d1;
+  color: rgb(97, 149, 198);
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #8494AA;
+}
+
+/* Add a background color and some padding around the form */
+/* 
+.formcontainer {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+} */
+
+ 
+input[type=text] {
+  width: 100%;
+  box-sizing: border-box;
+  border: 2px solid #a39185;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: #8494AA;
+  background-image: url('searchicon.png');
+  background-position: 10px 10px; 
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 40px;
+}
+
+.coursebanner { aspect-ratio: ratio 960 / 200;
+  width: 100vw}
